# send-to-comfyui

./: LICENSE  README.md  __init__.py  load_latest_image.py  pyproject.toml
.github/workflows/: publish.yml
extension/: background.js  manifest.json  popup.html  popup.js  rules.json
extension/_metadata/generated_indexed_rulesets/: _ruleset1
